<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_name"
        android:textColorHint="@color/colorBorder"
        android:textSize="12sp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:textColorHint="@color/colorBorder"
        android:layout_marginTop="24dp"
        android:textSize="12sp"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/shift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_shift_time"
        android:textColorHint="@color/colorBorder"
        android:layout_marginTop="24dp"
        android:textSize="12sp"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

</LinearLayout>
