<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login_Register">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="100dp"
        android:layout_alignBottom="@+id/login"
        android:layout_alignStart="@+id/email" />

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        style="@style/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/login"
        android:layout_marginStart="150dp"
        android:button="@drawable/checkbox"
        android:paddingStart="4dp"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:layout_marginBottom="10dp"
        android:text="@string/remember_me"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="90dp"
        android:layout_above="@+id/singUp"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/singUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_button_bottom"
        android:elevation="8dp"
        android:paddingLeft="42dp"
        android:paddingTop="4dp"
        android:paddingRight="42dp"
        android:paddingBottom="4dp"
        android:text="@string/sing_up"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_above="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:id="@+id/linearLayout">

    </LinearLayout>

</RelativeLayout>
